--- a/html/download.html
+++ b/html/download.html
@@ -11,15 +11,15 @@
     and choose &quot;Save as...&quot; and then open these up in your favorite
     plain-text editor. </font></p>
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
-  <tr valign="top" bgcolor="#CCCCCC">
-    <td><p><font size="-1"><a href="data/cPRF_niceformat.txt"><strong>cPRF_niceformat.txt</strong></a></font></p></td>
-    <td><p><font size="-1">This is probably the document that most people will want. It's
+  <tr valign="top">
+    <td><p><a href="[% basedir %]/data/cPRF_niceformat.txt">cPRF_niceformat.txt</a></p></td>
+    <td><p>This is probably the document that most people will want. It's
           formatted linearly, so that each record has it's own section. This
-          document can be open in Word without too much trouble.(1.2 MB)</font></p>
+          document can be open in Word without too much trouble.(1.2 MB)</p>
       <p>&nbsp;</p></td>
   </tr>
-  <tr valign="top" bgcolor="#CCCCCC">
-    <td><p><font size="-1"><a href="data/cPRF_cols.txt"><strong>cPRF_cols.txt</strong></a></font></p>
+  <tr valign="top">
+    <td><p><a href="[% basedir %]/data/cPRF_cols.txt">cPRF_cols.txt</a></p>
       <p>&nbsp;</p></td>
     <td><p><font size="-1">Column formatted document. Becuase the sequence and basepaired
           columns are so wide, this document is really not intended for use
@@ -29,7 +29,7 @@
   </tr>
 
   <tr>
-    <td><p><a href="html/prfdb.tar.gz">The prfdb</a></p></td>
+    <td><p><a href="[% basedir %]/data/prfdb.tar.gz">The prfdb</a></p></td>
     <td><p>This archive contains the code of the PRFdb.  It includes the source for the
     secondary structure algorithms used to generate the database as well as a default
     configuration file.</p></td>
