--- a/html/download.html
+++ b/html/download.html
@@ -1,7 +1,7 @@
  </td>
  <td width="70%">
 
-<p><font size="-1">Candidate cPRF signals are
+<p>Candidate cPRF signals are
     available as a batch download from either of the two text files below.
     Each file is prefaced with the SQL used to generate the results, for
     clarity. If you desire direct access to the PRFdb via a MySQL client,
@@ -9,7 +9,7 @@
     Dr. Dinman
     (<a href="mailto:dinman@umd.edu">dinman@umd.edu</a>). Right-click
     and choose &quot;Save as...&quot; and then open these up in your favorite
-    plain-text editor. </font></p>
+    plain-text editor. </p>
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
   <tr valign="top">
     <td><p><a href="[% basedir %]/data/cPRF_niceformat.txt">cPRF_niceformat.txt</a></p></td>
