--- a/html/download.html
+++ b/html/download.html
@@ -9,7 +9,7 @@
     Dr. Dinman
     (<a href="mailto:dinman@umd.edu">dinman@umd.edu</a>). Right-click
     and choose &quot;Save as...&quot; and then open these up in your favorite
-    plain-text editor. </p>
+    plain-text editor. </p><br><br>
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
   <tr valign="top">
     <td><p><a href="[% basedir %]/data/cPRF_niceformat.txt">cPRF_niceformat.txt</a></p></td>
