--- a/html/download.html
+++ b/html/download.html
@@ -21,10 +21,10 @@
   <tr valign="top">
     <td><p><a href="[% basedir %]/data/cPRF_cols.txt">cPRF_cols.txt</a></p>
       <p>&nbsp;</p></td>
-    <td><p><font size="-1">Column formatted document. Becuase the sequence and basepaired
+    <td><p>Column formatted document. Becuase the sequence and basepaired
           columns are so wide, this document is really not intended for use
           with Word or even Excel. Open this with a plain-text editor and then
-          use Perl or someother scripting language to parse the data.(780 Kb)</font></p>
+          use Perl or someother scripting language to parse the data.(780 Kb)</p>
       <p>&nbsp;</p></td>
   </tr>
 
