small header change

--- a/html/header.html
+++ b/html/header.html
@@ -24,16 +24,16 @@
       <b><a href="[% searchform %]">Search</a></b>
     </td>
     <td width="14%" align="center" valign="top">
-      <b><a href="[% importform %]">Import</a></b>
+      <b><a href="[% cloudform %]">Distribution</a></b>
     </td>
     <td width="14%" align="center" valign="top">
       <b><a href="[% filterform %]">Filter Prfdb</a></b>
     </td>
     <td width="14%" align="center" valign="top">
-      <b><a href="[% downloadform %]">Download</a></b>
+      <b><a href="[% importform %]">Import</a></b>
     </td>
     <td width="14%" align="center" valign="top">
-      <b><a href="[% cloudform %]">Cloud</a></b>
+      <b><a href="[% downloadform %]">Download</a></b>
     </td>
     <td width="14%" align="center" valign="top">
       <b><a href="[% helpform %]">Help</a></b>
