--- a/html/header.html
+++ b/html/header.html
@@ -27,7 +27,7 @@
       <b><a href="[% cloudform %]">Distribution</a></b>
     </td>
     <td width="14%" align="center" valign="top">
-      <b><a href="[% filterform %]">Filter Prfdb</a></b>
+      <b><a href="[% filterform %]">Filter</a></b>
     </td>
     <td width="14%" align="center" valign="top">
       <b><a href="[% downloadform %]">Download</a></b>
