--- a/html/searchform.html
+++ b/html/searchform.html
@@ -5,6 +5,7 @@ It is available here: <a href="http://mgc.nci.nih.gov">http://mgc.nci.nih.gov</a
 Search the PRFdb for an arbitrary sequence using BLAST.<br>
 
 [% blast_startform %]
-[% blastsearch %]
+
+<textarea name='blastsearch' rows=12 cols=100 wrap='physical'></textarea>
 <br>
 [% blast_submit %]
