--- a/html/filter_finished.html
+++ b/html/filter_finished.html
@@ -1,5 +1,7 @@
  </td>
+
  <td width="70%">
+   <tr>
 <table width="95%" border="0" align="center" cellpadding="2" cellspacing="1">
 
   <tr valign="top" bgcolor="#E9EBF7">
@@ -128,6 +130,9 @@
       [% barcode %]
     </td>
   </tr>
+</table>
+  </tr>
 
 <hr>
 <br>
+
