--- a/html/help_detail.html
+++ b/html/help_detail.html
@@ -8,7 +8,7 @@
  </p>
 
     <a name="example">Example entry from the PRFdb.</a><br>
-    <table width="95%" border="0" align="center" cellpadding="2"
+    <table width="100%" border="0" align="center" cellpadding="2"
   cellspacing="1">
 
       <tr valign="top" bgcolor="#E9EBF7">
@@ -21,7 +21,7 @@
 	    Saccharomyces cerevisiae</i>
 	  </td>
 	<td width="40%" rowspan="12" valign="top">
-	    <div align="left"><a href="#help_graph"><img src="[% basedir %]/images/distribution/00/04/SGDID:S0004310-1995-443821.png" border="2"></a></div>
+	    <div align="left"><a href="#help_graph"><img src="[% basedir %]/html/SGDID:S0004310-1995-443821.png" border="2"></a></div>
 	    </td>
       </tr>
 
@@ -30,7 +30,7 @@
 	    <a href="#help_accession"><div align="right"><strong>Accession: </strong></div></a>
 	    </td>
 	<td>
-	    <a href="http://dinmanlab.umd.edu/prfdb_beta/index.cgi/browse?accession=SGDID:S0004310">SGDID:S0004310</a>
+	    <a href="http://dinmanlab.umd.edu/prfdb/index.cgi/browse?accession=SGDID:S0004310">SGDID:S0004310</a>
 	    </td>
       </tr>
 
@@ -147,7 +147,7 @@
     size="-1">C<font color="blue">U</font><font color="blue">G</font><font color="blue">G</font><font color="blue">C</font><font color="blue">U</font><font color="blue">G</font>ACGAUUUCCUUAUAAUAUCAA<font color="blue">C</font><font color="blue">A</font><font color="blue">G</font>A<font color="blue">C</font><font color="blue">C</font><font color="blue">A</font>A<font color="red">C</font><font color="red">A</font><font color="red">G</font><font color="red">C</font><font color="red">A</font><font color="red">A</font><font color="red">G</font><font color="red">U</font>GAUCAAUAUCAAAAA<font color="red">G</font><font color="red">C</font><font color="red">U</font><font color="red">U</font><font color="red">G</font><font color="red">C</font>CA<font color="red">U</font><font color="red">G</font><font color="green">G</font><font color="green">G</font><font color="green">C</font>GGA<font color="green">U</font><font color="green">U</font><font color="green">U</font><font color="green">C</font>AAAAAUAUAAUGC<font color="green">G</font><font color="green">A</font><font color="green">A</font><font color="green">A</font><font color="green">G</font><font color="green">C</font><font color="green">C</font>A</font>
 
       <font face="Courier New, Courier, mono" size="-3">
-	    <a href="http://dinmanlab.umd.edu/prfdb_beta/index.cgi/download_subseq?mfeid=443821">Download
+	    <a href="http://dinmanlab.umd.edu/prfdb/index.cgi/download_subseq?mfeid=443840">Download
 	    subsequence</a>
 	      </font>
         </td>
@@ -160,7 +160,7 @@
 	    size="-1">.<font color="blue">(</font><font color="blue">(</font><font color="blue">(</font><font color="blue">(</font><font color="blue">(</font><font color="blue">(</font>.....................<font color="blue">)</font><font color="blue">)</font><font color="blue">)</font>.<font color="blue">)</font><font color="blue">)</font><font color="blue">)</font>.<font color="red">(</font><font color="red">(</font><font color="red">(</font><font color="red">(</font><font color="red">(</font><font color="red">(</font><font color="red">(</font><font color="red">(</font>...............<font color="red">)</font><font color="red">)</font><font color="red">)</font><font color="red">)</font><font color="red">)</font><font color="red">)</font>..<font color="red">)</font><font color="red">)</font><font color="green">(</font><font color="green">(</font><font color="green">(</font>...<font color="green">(</font><font color="green">(</font><font color="green">(</font><font color="green">(</font>.............<font color="green">)</font><font color="green">)</font><font color="green">)</font><font color="green">)</font><font color="green">)</font><font color="green">)</font><font color="green">)</font>.</font>
 
 	      <font face="Courier New, Courier, mono" size="-3">
-		    <a href="http://dinmanlab.umd.edu/prfdb_beta/index.cgi/download_parens?mfeid=443821">Download
+		    <a href="http://dinmanlab.umd.edu/prfdb/index.cgi/download_parens?mfeid=443840">Download
 		    brackets</a>
 		      </font>
 	      </td>
@@ -173,7 +173,7 @@
 	   size="-1">.<font color="blue">1</font><font color="blue">1</font><font color="blue">1</font><font color="blue">1</font><font color="blue">1</font><font color="blue">1</font>.....................<font color="blue">1</font><font color="blue">1</font><font color="blue">1</font>.<font color="blue">1</font><font color="blue">1</font><font color="blue">1</font>.<font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font>...............<font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font><font color="red">2</font>..<font color="red">2</font><font color="red">2</font><font color="green">3</font><font color="green">3</font><font color="green">3</font>...<font color="green">3</font><font color="green">3</font><font color="green">3</font><font color="green">3</font>.............<font color="green">3</font><font color="green">3</font><font color="green">3</font><font color="green">3</font><font color="green">3</font><font color="green">3</font><font color="green">3</font>.</font>
 
 	     <font face="Courier New, Courier, mono" size="-3">
-	           <a href="http://dinmanlab.umd.edu/prfdb_beta/index.cgi/download_parsed?mfeid=443821">Download
+	           <a href="http://dinmanlab.umd.edu/prfdb/index.cgi/download_parsed?mfeid=443840">Download
 	           parsed</a>
 		     </font>
 	     </td>
@@ -183,11 +183,11 @@
 	<td width="10%"><a href="#help_feynman">Feynman</a></td>
         <td>
 
-          <embed src="http://dinmanlab.umd.edu/prfdb_beta/images/feynman/00/04/SGDID:S0004310-443821.svg"
+          <embed src="http://dinmanlab.umd.edu/prfdb/images/feynman/00/04/SGDID:S0004310-443840.svg"
           width = 821 height = 98.75 border = "0">
 
 	      <font face="Courier New, Courier, mono" size="-3">
-		    <a href="http://dinmanlab.umd.edu/prfdb_beta/index.cgi/download_bpseq?mfeid=443821">Download
+		    <a href="http://dinmanlab.umd.edu/prfdb/index.cgi/download_bpseq?mfeid=443840">Download
 		    bpseq</a>
 		      </font>
         </td>
