--- a/html/download.html
+++ b/html/download.html
@@ -36,3 +36,9 @@
   </tr>
 </table>
 
+[% download_startform %]
+<p>
+Download the entire table for the species of your choice:<br>
+[% species %]<br>
+[% download_submit %]
+</p>
