small mfe_z change

--- a/html/mfe_z_body.html
+++ b/html/mfe_z_body.html
@@ -14,11 +14,13 @@
     </td>
     <td valign="top" width="10%">
       <div align="left">
-        <a href="[% base %]/detail?accession=[% accession %]&slipstart=[% start %]"><strong>[% accession %]</strong></a>
+        <a href="[% base %]/browse?accession=[% accession %]"><strong>[% accession %]</strong></a>
       </div>
     </td>
     <td valign="top" width="10%">
-      <div align="center">[% start %]</div>
+      <div align="center">
+        <a href="[% base %]/detail?accession=[% accession %]&slipstart=[% start %]"><strong>[% start %]</strong></a>
+      </div>
     </td>
     <td valign="top" width="40%">
       <div align="left">[% comments %]</div>
