--- a/html/header.html
+++ b/html/header.html
@@ -17,25 +17,28 @@
 </table>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td width="14%" align="center" valign="top">
+    <td width="12%" align="center" valign="top">
       <b><a href="[% base %]">Home</a></b>
     </td>
-    <td width="14%" align="center" valign="top">
+    <td width="13%" align="center" valign="top">
       <b><a href="[% searchform %]">Search</a></b>
     </td>
-    <td width="14%" align="center" valign="top">
+    <td width="12%" align="center" valign="top">
       <b><a href="[% cloudform %]">Distribution</a></b>
     </td>
-    <td width="14%" align="center" valign="top">
+    <td width="13%" align="center" valign="top">
       <b><a href="[% filterform %]">Filter</a></b>
     </td>
-    <td width="14%" align="center" valign="top">
+    <td width="12%" align="center" valign="top">
+      <b><a href="[% snpform %]">SNP</a></b>
+    </td>
+    <td width="13%" align="center" valign="top">
       <b><a href="[% downloadform %]">Download</a></b>
     </td>
-    <td width="14%" align="center" valign="top">
+    <td width="12%" align="center" valign="top">
       <b><a href="[% importform %]">Import</a></b>
     </td>
-    <td width="14%" align="center" valign="top">
+    <td width="13%" align="center" valign="top">
       <b><a href="[% helpform %]">Help</a></b>
     </td>
   </tr>
