--- a/html/cloud.html
+++ b/html/cloud.html
@@ -1,3 +1,5 @@
+
+<center>
 <p>This is a cloud for <i>[% nicespecies %]</i>
 [% IF pknots_only %]
  for only those PRF signals with pseudoknots.
@@ -8,6 +10,8 @@
 <a HREF="[% map_url %]">
   <img src="[% cloud_url %]" ismap>
 </a>
+</center>
+
 <br>
 The x axis displays the range of putative <a href="[% base %]/help_detail#help_mfe">
 minimum free energy</a> values computed for all <i>[% nicespecies %]</i>
