--- a/html/cloudform.html
+++ b/html/cloudform.html
@@ -11,5 +11,5 @@
   [% cloud_filters %]<br>
   Choose a slippery site to examine:<br>
   [% slipsites %]<br>
-  [% submit %]
+  [% cloudsubmit %]
  </p>
