--- a/html/header.html
+++ b/html/header.html
@@ -10,47 +10,69 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td align = "center"><a href="[% base %]" target="_top">
-      <img src="[% basedir %]/html/PRFdb_logo2.gif" width="255" height="85" vspace="2" border="0"></a>
-      <a href="[% base %]" target="_top"><img src="[% basedir %]/html/PRFdb_top_banner.jpg" width="328" height="80" vspace="2" border="0"></a>
+      <img src="[% basedir %]/html/PRFdb_logo2.gif" width="153" height="51" vspace="2" border="0"></a>
+      <a href="[% base %]" target="_top">
+      <img src="[% basedir %]/html/PRFdb_top_banner.jpg" width="197" height="48" vspace="2" border="0"></a>
     </td>
   </tr>
 </table>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td width="12%" align="center" valign="top">
-      <b><a href="[% base %]">Home</a></b>
+ 
+   <td width="12%" align="center" valign="top" [% IF category == '' %] bgcolor="#366e6d">
+      <b><a href="[% base %]"><font color="white">Home</font></a></b>[% ELSE %]
+      <b><a href="[% base %]">Home</a></b>[% END %]
     </td>
-    <td width="13%" align="center" valign="top">
-      <b><a href="[% searchform %]">Search</a></b>
+
+    <td width="13%" align="center" valign="top" [% IF category =='searc' %] bgcolor="#366e6d">
+      <b><a href="[% searchform %]"><font color="white">Search</font></a></b>[% ELSE %]
+      <b><a href="[% searchform %]">Search</a></b>[% END %]
     </td>
-    <td width="12%" align="center" valign="top">
-      <b><a href="[% cloudform %]">Distribution</a></b>
+
+    <td width="12%" align="center" valign="top" [% IF category == 'cloud' %] bgcolor="#366e6d">
+      <b><a href="[% cloudform %]"><font color="white">Distribution</font></a></b>[% ELSE %]
+      <b><a href="[% cloudform %]">Distribution</a></b>[% END %]
     </td>
-    <td width="13%" align="center" valign="top">
-      <b><a href="[% filterform %]">Filter</a></b>
+
+     <td width="13%" align="center" valign="top" [% IF category == 'filte' %] bgcolor="#366e6d">
+      <b><a href="[% filterform %]"><font color="white">Filter</font></a></b>[% ELSE %]
+      <b><a href="[% filterform %]">Filter</a></b>[% END %]
     </td>
-    <td width="12%" align="center" valign="top">
-      <b><a href="[% snpform %]">SNP</a></b>
+
+     <td width="12%" align="center" valign="top" [% IF category == 'snpst' %] bgcolor="#366e6d">
+      <b><a href="[% snpform %]"><font color="white">SNP</font></a></b>[% ELSE %]
+      <b><a href="[% snpform %]">SNP</a></b>[% END %]
     </td>
-    <td width="13%" align="center" valign="top">
-      <b><a href="[% downloadform %]">Download</a></b>
+
+     <td width="13%" align="center" valign="top" [% IF category == 'downl' %] bgcolor="#366e6d">
+      <b><a href="[% downloadform %]"><font color="white">Download</font></a></b>[% ELSE %]
+      <b><a href="[% downloadform %]">Download</a></b>[% END %]
     </td>
-    <td width="12%" align="center" valign="top">
-      <b><a href="[% importform %]">Import</a></b>
+
+     <td width="12%" align="center" valign="top" [% IF category == 'impor' %] bgcolor="#366e6d">
+      <b><a href="[% importform %]"><font color="white">Import</font></a></b>[% ELSE %]
+      <b><a href="[% importform %]">Import</a></b>[% END %]
     </td>
-    <td width="13%" align="center" valign="top">
-      <b><a href="[% helpform %]">Help</a></b>
+
+     <td width="13%" align="center" valign="top" [% IF category == 'help' %] bgcolor="#366e6d">
+      <b><a href="[% helpform %]"><font color="white">Help</font></a></b>[% ELSE %]
+      <b><a href="[% helpform %]">Help</a></b>[% END %]
     </td>
+
   </tr>
+
+<tr align="left" valign="top">
+  <td bgcolor="#366e6d" height="5px" width="100%" colspan="8">
+  </td>
+  [% IF category == 'detai' %]
+  </tr>
+  <tr>
+  <td bgcolor="#366e6d" width="100%" colspan="8">
+   <center><b><font color="white">Detail View</font></b></center>
+  </td>
+  [% END %]
+</tr>
 </table>
-<hr>
-<center>
-    To begin browsing the PRFdb, please enter your search terms below.<br>
-    [% startsearchform %]
-    [% searchquery %]
-    [% submit %]
-    [% endsearchform %]
-</center>
 
 <table align="center" width="100%" border="0" cellspacing="2" cellpadding="2">
 <tr align="left" valign="top">
