--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
 <tr align="left" valign="top">
   <td width="20%">
     <p>
-[% FOREACH species = species_info.keys %]
- <i>[% species_info.$species.count %] <a href="[% base %]/cloud?species=[% species %]">[% species_info.$species.nicename %]</a></i> sequence windows<br>
+[% FOREACH species = species_info.keys.sort %]
+ <i>[% species_info.$species.count %] <a href="[% base %]/cloud?species=[% species %]&slipsites=all">[% species_info.$species.nicename %]</a></i> sequence windows<br>
  comprising [% species_info.$species.done_genes %] of [% species_info.$species.genes %] genes.<br><br>
 
 [% END %]
