--- a/html/secondfilterform.html
+++ b/html/secondfilterform.html
@@ -13,7 +13,8 @@ Filters: <br>
 [% filters %]<br>
 Minimum Free Energy Requirement: [% choose_mfe %](The default is 1 standard deviation away from the mean)<br>
 Pairs Requirement: [% choose_pairs %](1 standard deviation from mean)<br>
-Choose Limit: [% choose_limit %]<br>
+Place a limit on the number of rows from the database to retrieve: [% choose_limit %]<br>
+The results may be downloaded as a tab delimited file or printed to screen: [% choose_format %]<br>
 [% filter_submit %]
 
 
