--- a/html/chosen_download.html
+++ b/html/chosen_download.html
@@ -1,14 +1,14 @@
 <p>
   Using the links below you may download the entire MFE table and
-  entire Boot table for [% chosen_species %].<br>
+  entire Boot table for <i>[% chosen_species %]</i>.<br>
   Be aware that it will take some time.
 <br><br>
   Click the following to download the entire
-  <a href="[% base %]/download_all_genome?species[% chosen_species %]">Genome table</a>.
+  <a href="[% base %]/download_all_genome?species=[% the_species %]">Genome table</a>.
 <br>
   Click the following to download the entire
-  <a href="[% base %]/download_all_mfe?species=[% chosen_species %]">MFE table</a>.
+  <a href="[% base %]/download_all_mfe?species=[% the_species %]">MFE table</a>.
 <br>
   Click the following to download the entire
-  <a href="[% base %]/download_all_boot?species=[% chosen_species %]">Boot table</a>.
+  <a href="[% base %]/download_all_boot?species=[% the_species %]">Boot table</a>.
 </p>
