--- a/html/searchform.html
+++ b/html/searchform.html
@@ -1,10 +1,10 @@
 <center>
-    To begin browsing the PRFdb, please enter your search terms below.<br>
-    [% startsearchform %]
-    [% searchquery %]
-    [% search_species_limit %]
-    [% submit %]
-    [% endsearchform %]
+  To begin browsing the PRFdb, please enter your search terms below.<br>
+  [% startsearchform %]
+  [% searchquery %]
+  [% search_species_limit %]
+  [% searchsubmit %]
+   </form>
 </center>
 
 A majority of the Accessions in the PRFdb come from the Mammalian Genome Collection.
