--- a/html/filter_finished.html
+++ b/html/filter_finished.html
@@ -1,11 +1,10 @@
- </td>
-
- <td width="70%">
-   <tr>
-<table width="95%" border="0" align="center" cellpadding="2" cellspacing="1">
+<table style="table-layout: fixed" width="800">
+    <colgroup>
+        <col width="20%"><col width="80%">
+    </colgroup>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Accession: </strong></div>
     </td>
     <td>
@@ -14,7 +13,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Accession: </strong></div>
     </td>
     <td>
@@ -23,7 +22,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Algorithm: </strong></div>
     </td>
     <td>
@@ -32,7 +31,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Sequence Length: </strong></div>
     </td>
     <td>
@@ -41,7 +40,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Start: </strong></div>
     </td>
     <td>
@@ -50,7 +49,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Slipsite: </strong></div>
     </td>
     <td>
@@ -59,7 +58,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Minimum Free Energy: </strong></div>
     </td>
     <td>
@@ -68,7 +67,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Number of base pairs: </strong></div>
     </td>
     <td>
@@ -77,7 +76,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Pseudoknotted? </strong></div>
     </td>
     <td>
@@ -85,9 +84,8 @@
     </td>
   </tr>
 
-
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Sequence: </strong></div>
     </td>
     <td>
@@ -96,7 +94,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>[% algorithm %] output: </strong></div>
     </td>
     <td>
@@ -105,7 +103,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Parsed output: </strong></div>
     </td>
     <td>
@@ -114,7 +112,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Parentheses output: </strong></div>
     </td>
     <td>
@@ -123,7 +121,7 @@
   </tr>
 
   <tr valign="top" bgcolor="#E9EBF7">
-    <td width="20%">
+    <td>
       <div align="right"><strong>Barcode: </strong></div>
     </td>
     <td>
