--- a/html/sliplist_stop_codon.html
+++ b/html/sliplist_stop_codon.html
@@ -12,5 +12,14 @@
  <td width="33%"><div align="center"><strong> </strong></div>
  </td>
 </tr>
-
-
+[% IF slipcount > 0 %]
+<tr>
+ <td width="33%">
+   <div align="center"><strong><font face="Courier New, Courier, mono">
+    <a href="[% base %]/detail?id=[% id %]&accession=[% accession %]" title="View the detailed information for all slipsites of [% accession %]">All</a>
+  </font></strong></div>
+ </td>
+ <td width="33%"></td>
+ <td width="33%"></td>
+</tr>
+[% END %]
