--- a/html/searchform.html
+++ b/html/searchform.html
@@ -1,3 +1,12 @@
+<center>
+  To begin browsing the PRFdb, please enter your search terms below.<br>
+  [% startsearchform %]
+  [% searchquery %]
+  [% search_species_limit %]
+  [% searchsubmit %]
+   </form>
+</center>
+
 A majority of the Accessions in the PRFdb come from the Mammalian Genome Collection.
 It is available here: <a href="http://mgc.nci.nih.gov">http://mgc.nci.nih.gov</a>.
 <hr>
