--- a/html/cloudform.html
+++ b/html/cloudform.html
@@ -6,10 +6,12 @@
   MFE/z scores of interest.
  </p>
  <p>
+  Choose how many bases to examine:<br>
+  [% seqlength %]<br>
   Choose a species to examine:<br>
   [% species %]
   [% cloud_filters %]<br>
   Choose a slippery site to examine:<br>
   [% slipsites %]<br>
-  [% submit %]
+  [% cloudsubmit %]
  </p>
